# project-milky-way

./: .gitignore  README.md  pyproject.toml
backend/: go.mod  go.sum  server.config.yml.example
backend/cmd/server/: main.go
backend/cmd/setup/: main.go
backend/ext/kakao/: client.go  local.go  type.go
backend/internal/: error.go
backend/internal/api/: response.go  route.go  star.go
backend/internal/config/: config.go
backend/internal/database/: model.go  mongodb.go  query.go
backend/internal/db/: config.go  mongodb.go
backend/internal/model/: star.go
backend/internal/server/: cors.go  keyword.go  response.go  server.go  star.go
backend/internal/setup/: database.go  parser.go
development/mongodb/: .env.example  docker-compose.yml
frontend/: .env.example  .gitignore  package.json  tsconfig.json
frontend/src/: app.html
frontend/src/@types/: base.d.ts  kakao.d.ts
frontend/src/lib/Header/: Header.svelte  ProjectTitle.svelte  SearchButton.svelte
frontend/src/lib/SearchModal/: NoResult.svelte  SearchModal.svelte  SearchResult.svelte
frontend/src/lib/store/: map.ts
frontend/src/routes/: __layout.svelte  index.svelte
server/: go.mod  go.sum  main.go
server/cmd/server/: main.go
server/cmd/setup/: main.go
server/internal/: error.go
server/internal/api/: request.go  response.go  route.go  star.go
server/internal/config/: config.go
server/internal/database/: config.go  mongodb.go
server/internal/model/: star.go
server/internal/server/: server.go
server/internal/setup/: database.go  parser.go
src/: main.py
(+13 files in other folders)
