[project]
name = "project-milky-way"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "hashfunc", email = "root@hashfunc.io" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src/**"]
